--- a/index.css
+++ b/index.css
@@ -119,7 +119,8 @@ h6 {
     align-items: flex-start;
     width:89rem;
     margin: 5rem auto;
-    box-shadow: 0 0px 10px #73787e;
+    box-shadow: 0 0px 10px rgba(124, 126, 129, 0.459);
+    border-radius: 6px;
 
 }
 
@@ -134,6 +135,7 @@ h6 {
     align-items: flex-start;
     color: #1D2C3C;
     background-color: #fff;
+   
 
 }
 
@@ -227,15 +229,21 @@ border-radius: 5px;
 font-size: 1.6rem;
 cursor: pointer;
 }
+.stripe{
+    width:9.2rem;
+    height: 2.1rem;
+}
 
 /************************/
 /* FREELANCER SECTION */
 /************************/
 .checkout-section,.freelancer-section{
     padding: 3rem;
+    
 }
 .checkout-section{
     width: 58rem;
+    border-radius: 6px;
 }
 .freelancer-section{
     color: #fff;
@@ -244,6 +252,8 @@ cursor: pointer;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
 }
 #switch-link:link,#switch-link:active,#switch-link:visited{
     color:#fff;
